[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/apps/calendar/CalendarApp.gd" id="1"]

[node name="Calendar" type="Window"]
initial_position = Vector2i(420, 720)
size = Vector2i(420, 500)
script = ExtResource("1")

[node name="Content" type="VBoxContainer" parent="Calendar"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
custom_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="Calendar/Content"]
custom_constants/separation = 12

[node name="WeekLabel" type="Label" parent="Calendar/Content/Header"]
text = "Week 1"

[node name="AdvanceButton" type="Button" parent="Calendar/Content/Header"]
text = "Advance Week"

[node name="EventList" type="ItemList" parent="Calendar/Content"]
size_flags_vertical = 2

[node name="EventDetail" type="VBoxContainer" parent="Calendar/Content"]
size_flags_vertical = 2
custom_constants/separation = 8

[node name="Title" type="Label" parent="Calendar/Content/EventDetail"]
text = "Select an event"
add_theme_font_size_override("font_size", 18)

[node name="Body" type="Label" parent="Calendar/Content/EventDetail"]
autowrap_mode = 3

